# thoughtfull

./: .gitignore  CLAUDE.md  README.md  data.txt  index.html  jquery.fcbkcomplete.js  pyproject.toml  style.css  todo.txt
mainpage/: index.html
mainpage/bootstrap/css/: bootstrap.min.css
mainpage/index_files/: hacks.css  style.css
src/thoughtfull/: main.py
tests/slack/: test_collector.py
thoughtfull/slack/: client.py  collector.py  models.py
