[project]
name = "thoughtfull"
version = "0.1.0"
description = "A tool for collecting slack threads, personal notes, and other data together so that it can easily be searched."
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "loguru",
    "tenacity",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["uv>=0.7"]
build-backend = "uv.build"
